Finished first draft of API documentation
