# website/static/swagger/swagger.json
@@ -15,9 +15,34 @@
     "produces": [
         "application/json"
     ],
+    "tags": [
+        {
+            "name": "GET",
+            "description": "Query the request logs."
+        },
+        {
+            "name": "POST",
+            "description": "Create a new 'fake' request."
+        },
+        {
+            "name": "PUT",
+            "description": "Replace all information of a specific request."
+        },
+        {
+            "name": "PATCH",
+            "description": "Update specific information on a specific request."
+        },
+        {
+            "name": "DELETE",
+            "description": "Remove a specific request."
+        }
+    ],
     "paths": {
         "/requests": {
             "get": {
+                "tags": [
+                    "GET"
+                ],
                 "summary": "Returns a list of information about all requests.",
                 "produces": [
                     "application/json"
@@ -56,65 +81,11 @@
                         }
                     }
                 }
-            }
-        },
-        "/requests/{existing_id}": {
-            "get": {
-                "summary": "Returns information of a specific request ID.",
-                "parameters": [
-                    {
-                        "name": "id",
-                        "description": "The ID of the request.",
-                        "in": "path",
-                        "required": "true",
-                        "schema": {
-                            "type": "integer",
-                            "minimum": 1,
-                            "format": "int64"
-                        }
-                    }
-                ],                    
-                "produces": [
-                    "application/json"
-                ],
-                "responses": {
-                    "201": {
-                        "description": "Success",
-                        "schema": {
-                            "type": "object",
-                            "properties": {
-                                "id": {
-                                    "type": "integer"
-                                },
-                                "ip": {
-                                    "type": "string"
-                                },
-                                "isp": {
-                                    "type": "string"
-                                },
-                                "city": {
-                                    "type": "string"
-                                },
-                                "country": {
-                                    "type": "string"
-                                },
-                                "method": {
-                                    "type": "string"
-                                },
-                                "agent": {
-                                    "type": "string"
-                                },
-                                "created_at": {
-                                    "type": "string"
-                                }
-                            }
-                        }
-                    }
-                }
-            }
-        },
-        "/requests/asdf": {
+            },
             "post": {
+                "tags": [
+                    "POST"
+                ],
                 "summary": "Creates new 'fake' request ID.",
                 "parameters": [
                     {
@@ -207,6 +178,270 @@
                                 }
                             }
                         }
+                    }
+                }
+            }
+        },
+        "/requests/{id}": {
+            "get": {
+                "tags": [
+                    "GET"
+                ],
+                "summary": "Returns information of a specific request ID.",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "description": "The ID of the request.",
+                        "in": "path",
+                        "required": "true",
+                        "schema": {
+                            "type": "integer",
+                            "minimum": 1,
+                            "format": "int64"
+                        }
+                    }
+                ],                    
+                "produces": [
+                    "application/json"
+                ],
+                "responses": {
+                    "201": {
+                        "description": "Success",
+                        "schema": {
+                            "type": "object",
+                            "properties": {
+                                "id": {
+                                    "type": "integer"
+                                },
+                                "ip": {
+                                    "type": "string"
+                                },
+                                "isp": {
+                                    "type": "string"
+                                },
+                                "city": {
+                                    "type": "string"
+                                },
+                                "country": {
+                                    "type": "string"
+                                },
+                                "method": {
+                                    "type": "string"
+                                },
+                                "agent": {
+                                    "type": "string"
+                                },
+                                "created_at": {
+                                    "type": "string"
+                                }
+                            }
+                        }
+                    }
+                }
+            },
+            "put": {
+                "tags": [
+                    "PUT"
+                ],
+                "summary": "Replace all information of a specific request.",
+                "parameters": [
+                    {
+                        "name": "ip",
+                        "description": "The requestor's IP address.",
+                        "in": "path",
+                        "required": "true",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    {
+                        "name": "isp",
+                        "description": "The requestor's ISP.",
+                        "in": "path",
+                        "required": "true",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    {
+                        "name": "city",
+                        "description": "The city of the requesting IP.",
+                        "in": "path",
+                        "required": "true",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    {
+                        "name": "country",
+                        "description": "The country of the requesting IP.",
+                        "in": "path",
+                        "required": "true",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    {
+                        "name": "method",
+                        "description": "The request method. (i.e., GET, POST, PUT, PATCH, DELETE)",
+                        "in": "path",
+                        "required": "true",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    {
+                        "name": "agent",
+                        "description": "The agent of the requester.",
+                        "in": "path",
+                        "required": "true",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                ],                    
+                "produces": [
+                    "application/json"
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Success",
+                        "schema": {
+                            "type": "object",
+                            "properties": {
+                                "id": {
+                                    "type": "integer"
+                                },
+                                "ip": {
+                                    "type": "string"
+                                },
+                                "isp": {
+                                    "type": "string"
+                                },
+                                "city": {
+                                    "type": "string"
+                                },
+                                "country": {
+                                    "type": "string"
+                                },
+                                "method": {
+                                    "type": "string"
+                                },
+                                "agent": {
+                                    "type": "string"
+                                },
+                                "created_at": {
+                                    "type": "string"
+                                }
+                            }
+                        }
+                    }
+                }
+            },
+            "patch": {
+                "tags": [
+                    "PATCH"
+                ],
+                "summary": "Update specific information on a specific request.",
+                "parameters": [
+                    {
+                        "name": "ip",
+                        "description": "The requestor's IP address.",
+                        "in": "path",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    {
+                        "name": "isp",
+                        "description": "The requestor's ISP.",
+                        "in": "path",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    {
+                        "name": "city",
+                        "description": "The city of the requesting IP.",
+                        "in": "path",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    {
+                        "name": "country",
+                        "description": "The country of the requesting IP.",
+                        "in": "path",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    {
+                        "name": "method",
+                        "description": "The request method. (i.e., GET, POST, PUT, PATCH, DELETE)",
+                        "in": "path",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    {
+                        "name": "agent",
+                        "description": "The agent of the requester.",
+                        "in": "path",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                ],                    
+                "produces": [
+                    "application/json"
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Success",
+                        "schema": {
+                            "type": "object",
+                            "properties": {
+                                "id": {
+                                    "type": "integer"
+                                },
+                                "ip": {
+                                    "type": "string"
+                                },
+                                "isp": {
+                                    "type": "string"
+                                },
+                                "city": {
+                                    "type": "string"
+                                },
+                                "country": {
+                                    "type": "string"
+                                },
+                                "method": {
+                                    "type": "string"
+                                },
+                                "agent": {
+                                    "type": "string"
+                                },
+                                "created_at": {
+                                    "type": "string"
+                                }
+                            }
+                        }
+                    }
+                }
+            },
+            "delete": {
+                "tags": [
+                    "DELETE"
+                ],
+                "summary": "Remove a specific request.",
+                "produces": [
+                    "application/json"
+                ],
+                "responses": {
+                    "200": {
+                        "description": "'message': 'ID {id} deleted.'"
                     }
                 }
             }
